no se estoy aburrido no se hacer frontend

--- a/app-supongo/package.json
+++ b/app-supongo/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "aws-sdk": "^2.1009.0",
     "dotenv": "^10.0.0",
+    "firebase": "^9.1.3",
     "pusher-js": "^7.0.3"
   },
   "devDependencies": {
