--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 back/node_modules
-app-supongo/node_modules
-app-supongo/assets/sendImage.png
+deprecated/node_modules
+deprecated/assets/sendImage.png
 .vscode/
